# fundor333.github.io

./: .editorconfig  .gitignore  .gitmodules  .htaccess  .imgbotconfig  .pre-commit-config.yaml  404.html  CNAME  README.md  avif.py  feed.json  generate_cover.py  generate_weeknote.py  get-pip.py  go.mod  go.sum  hydra-config.json  hydra.py  index.html  index.xml  make-post.py  makefile  mastodon2hugo.py  micro_meetup.py  my-feeds.opml  netlify.toml  opml_to_gohugo.py  optimizer.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  robots.txt  send_webmention.py  sitemap.xml  sorting_characters.py  sorting_charaters.py  syndication-collector.py  twtxt.txt  webmention.js  (+5 more)
.claude/: settings.local.json
.frontmatter/database/: taxonomyDb.json
.github/: dependabot.yml
.github/workflows/: anilist.yml  appletune_cron.yml  cron_anilist.yml  cron_github_issiue.yml  cron_photo.yml  cron_publisher.yml  cron_replay.yml  cron_webmentions.yml  cron_weekly.yml  hugo_publisher.yml  img.yml  updater.yml  webmention.yaml  webmentions.yml  weekly.yml
.well-known/: keybase.txt
about/: index.html
action_script/: README.md  aniist_run.py  appletune_run.py  github_issue.py  internal_link.py  photo_exif.py  replay-getter.py  send_weeknote_webmentions.py  syndication-adder.py  syndication-collector.py  temp.py  webmention.py
action_script/data/: memory_meetup.txt
admin/: config.yml  index.html
archetypes/: micro.md  now.md  page.md  photos.md  post.md
assets/js/: codecorner.min.js
assets/sass/: 88x31.scss  _imports.scss  add.scss  colors.sass  comments.scss  generic.scss  input.scss  media.scss  menu.scss  pride.scss  root.scss  share-button.scss  social_media_share.scss  typewriter.scss  webmention.scss  weeknote.scss
blog/andiamo-al-pycon8/: index.html
blog/astemio-al-terzo-databeers/: index.html
blog/dotfile-e-le-mie-config/: index.html
blog/e-si-torna-dal-pelicano/: index.html
blog/e-sono-passato-a-hugo/: index.html
blog/emacs-e-mai-piu-mouse/: index.html
blog/git-lalbero-delle-versioni/: index.html
blog/google-io-2017/: index.html
blog/gource-visualizzare-git-repository/: index.html
blog/grumpy-come-convertire-il-serpente-nel-gopher/: index.html
blog/il-mio-paperplane/: index.html
blog/linizio-di-una-avventura/: index.html
blog/orrori-delle-parentesi/: index.html
blog/ruby-e-il-mio-lavoro/: index.html
blog/sopravivvere-un-hackathon-programmando/: index.html
blog/titcoin-perchè-non-possono-funzionare-come-credi/: index.html
blog/utilizzi-alternativi-di-farebase/: index.html
boardgame/: index.html  index.xml
boardgame/sushi_go/: index.html
categories/: index.html  index.xml
categories/dev/: index.html  index.xml
categories/fingerfood/: index.html  index.xml
categories/post/: index.html  index.xml
categories/rant/: index.html  index.xml
categories/zeta-target/: index.html  index.xml
config/: syndication.yaml
config/_default/: config.yaml  hugo.yaml  maciaimage.yml  menu.yaml  module.yaml  params.yaml  privacy.yaml  seo.toml
config/production/: hugo.yaml
content/: _index.md  about.md  blank.md  blogroll.md  cite.md  colophon.md  connect.md  contact.md  explore.md  feeds.md  guy.md  hello.md  hoarding.md  ideas.md  now.md  podroll.md  slashpages.md  social_card.md  uses.md
content/books/: index.md
content/cv/: index.md
content/event/: 2016-04-17-pycon7.md  2016-05-14-scala-italy.md  2016-12-17_GDG_ Venezia_Tech_Talks_Ca_Foscari.md  2017-02-17-databeers-vce-1.md  2017-04-06-databeers-tuscany-3.md  2017-05-17-google-i-o-extended-venezia-2017.md  (+46 more)
css/: _breaking_points.scss  _colors.scss  _fira_code.scss  _syntax.scss  materialize.css  materialize.css.map  style.css  style.css.map  style.scss  styles.min.css
cv/: index.html
data/: 88x31.json  about.json  about_backup.json  blogroll.xml  books.json  consent.yaml  feed.json  jobs.json  memory_meetup.txt  note.json  packages.yaml  project.json  raw_hoarding.json
docs/: SYNDICATION.md
drago-de-piera/: index.html
event/: index.html  index.ics  index.xml
hoarding/: index.html
js/: snowstorm.js
layouts/: 404.html  home.html  index.html  index.humanstxt.txt  list.atom.xml  list.json.json  robots.txt  rss.xml
note/: index.html
notescript/: hugo-blog-with-jupyter-notebook.sh  using-pandas-for-getting-data-and-analise-them.sh
now/: index.html
post/: index.html  index.xml
project/: index.html
quiet/: index.html  index.xml
sass/: materialize.css  materialize.css.map  materialize.scss
static/: atom.xsl  carbon.txt  robots.txt  rss.xsl  site.webmanifest  twtxt.txt  wiki.ndtl
syndication_cli/: __init__.py  __main__.py  adder.py  collector.py  config.py  corrector.py  models.py  replay.py  tag_utility.py  tagger.py  utils.py
tags/: index.html  index.xml
talk/: index.html  index.xml
(+2339 files in other folders)
