[project]
name = "fundor333-github-io"
version = "0.1.0"
description = ""
authors = [{ name = "Fundor333", email = "fundor333@fundor333.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "feedparser",
    "requests",
    "python-dotenv",
    "weeknotebot",
    "pillow",
    "beautifulsoup4",
    "pyyaml",
    "lxml",
    "typer",
    "python-frontmatter",
    "bleach",
]

[project.entry-points.dotenv]
ignore = "false"
location = ".env"

[dependency-groups]
dev = [
    "hugo-nbconvert>=2025.5.24.3",
    "jupyterlab>=4.4.6",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.7",
    "pandas>=2.3.2",
    "pre-commit>=4.1.0,<5",
]

[tool.hatch.build.targets.sdist]
include = ["fundor333"]

[tool.hatch.build.targets.wheel]
include = ["fundor333"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
