[project]
name = "fundor333-github-io"
version = "1.0.0"
description = ""
authors = [{ name = "Fundor333", email = "fundor333@fundor333.com" }]
requires-python = "~=3.13.0"
readme = "README.md"
dependencies = [
    "feedparser",
    "requests",
    "python-dotenv",
    "weeknotebot",
    "pillow",
    "beautifulsoup4",
    "pyyaml",
    "lxml",
    "typer[all]",
    "python-frontmatter",
    "bleach",
    "pandas",

    "matplotlib",
    "rich",
]

[project.entry-points.dotenv]
ignore = "false"
location = ".env"

[dependency-groups]
dev = [
    "hugo-nbconvert>=2025.5.24.3",
    "jupyterlab>=4.4.6",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.7",
    "pre-commit>=4.1.0,<5",
]


[tool.ruff]
indent-width = 4
exclude = [".git", "*migrations*", ".tox", ".venv"]
line-length = 119

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # Regole di Pyflakes
    "W",   # Avvisi di PyCodeStyle
    "E",   # Errori di PyCodeStyle
    "I",   # Ordina correttamente gli import
    "UP",  # Avvisa se alcune cose possono essere modificate a causa di versioni Python più recenti
    "C4",  # Intercetta l'uso scorretto di comprensioni, dizionari, liste, ecc.
    "FA",  # Applica from __future__ import annotations
    "ISC", # Buon uso della concatenazione di stringhe
    "ICN", # Usa le convenzioni di importazione comuni
    "RET", # Buone pratiche di ritorno
    "SIM", # Regole di semplificazione comuni
    "TID", # Alcune buone pratiche di importazione
    "PTH", # Usa pathlib invece di os.path
    "TD",  # Sii diligente con i commenti TODO
    "NPY", # Alcune cose specifiche di numpy
]
ignore = ["ANN002", "ANN003", "RUF012", "PTH120", "B008"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 18
